assets/css/blog.css
body {
    font-size: 20px;
    max-width: 700px;
    margin: 0 auto;
    padding: 0 1rem;
    line-height: 2;
    color: #444;
}

.button,
button {
    font-size: 1em;
    border: none;
    text-transform: none;
    background-color: #ff851b;
}

a {
    color: #ff851b;
}

ul {
    list-style: none;
}

ol {
    list-style: decimal inside;
}

ol li::marker {
    font-weight: bold;
}

.container {
    padding: 0 4rem;
}

.bg-navy {
    background-color: #001f3f;
}

.bg-blue,
.bg-1 {
    background-color: #0074d9;
}

.bg-aqua {
    background-color: #7fdbff;
}

.bg-teal {
    background-color: #39cccc;
}

.bg-olive,
.bg-2 {
    background-color: #3d9970;
}

.bg-green {
    background-color: #2ecc40;
}

.bg-lime {
    background-color: #01ff70;
}

.bg-yellow {
    background-color: #ffdc00;
}

.bg-orange {
    background-color: #ff851b;
}

.bg-red {
    background-color: #ff4136;
}

.bg-fuchsia {
    background-color: #f012be;
}

.bg-purple {
    background-color: #b10dc9;
}

.bg-maroon,
.bg-3 {
    background-color: #85144b;
}

.bg-white {
    background-color: #fff;
}

.bg-gray {
    background-color: #aaa;
}

.bg-silver {
    background-color: #ddd;
}

.bg-black {
    background-color: #111;
}

.navy {
    color: #001f3f;
}

.blue {
    color: #0074d9;
}

.aqua {
    color: #7fdbff;
}

.teal {
    color: #39cccc;
}

.olive {
    color: #3d9970;
}

.green {
    color: #2ecc40;
}

.lime {
    color: #01ff70;
}

.yellow {
    color: #ffdc00;
}

.orange {
    color: #ff851b;
}

.red {
    color: #ff4136;
}

.fuchsia {
    color: #f012be;
}

.purple {
    color: #b10dc9;
}

.maroon {
    color: #85144b;
}

.white {
    color: #fff;
}

.silver {
    color: #ddd;
}

.gray {
    color: #aaa;
}

.black {
    color: #111;
}

/* custom */
.small {
    font-size: 0.8em;
}

.bg-light {
    background-color: #f4f4f4;
}

.social-link {
    width: 80px;
    height: 80px;
}

.slug {
    max-height: 500px;
}

.width-auto {
    width: auto !important;
}

.inline-block {
    display: inline-block;
}

.code {
    line-height: 1.5;
    background: beige;
    padding: 20px;
    border-radius: 10px;
}

#pagination li {
    display: inline;
    cursor: pointer;
    padding: 8px 14px;
}

#pagination li a {
    color: #555;
}

#pagination li:hover {
    background-color: #ddd;
}

#pagination li.active {
    background-color: #bbb;
}

.dark {
    filter: invert(100%);
    background-color: #333;
    border-color: #fff;
}

.dark img {
    filter: invert(100%);
}

